--- a/preamble/references/style.tex
+++ b/preamble/references/style.tex
@@ -27,7 +27,7 @@
 \DeclareFieldFormat*{title}{\sffamily\ifcategory{todo}{\textcolor{red}{#1}}{#1}}
 
 %% punctuation between title and subtitle
-\renewcommand*{\subtitlepunct}{ {\normalfont\textbullet} }
+\renewcommand*{\subtitlepunct}{\space{\normalfont\textbullet}\space}
 
 %% emphasize publishers (same as journals in IEEE style)
 % \DeclareListFormat{publisher}{\mkbibemph{#1}}
