chore(hyperref): use \MakeLinkTarget instead of \phantomsection
\phantomsection is now considered legacy

Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/frontmatter/information.tex
+++ b/frontmatter/information.tex
@@ -7,7 +7,7 @@
 \cleardoublepage
 
 % \chapternotnumbered{Information \& Abstract}
-\phantomsection
+\MakeLinkTarget{}
 \addcontentsline{toc}{chapter}{Information \& Abstract}
 \markboth{Information \& Abstract}{Information \& Abstract}
 
