--- a/preamble/layout/toc.tex
+++ b/preamble/layout/toc.tex
@@ -7,7 +7,7 @@
         %% Add list of structured environments
         %%  -> see `keytheorems` package documentation for more customization
         % \newcommand*{\listtheoremname}{List of Definitions, Remarks, \ldots}
-        % \cleardoublepage\phantomsection
+        % \cleardoublepage\MakeLinkTarget{}
         % \currentpdfbookmark{\listtheoremname}{loe} % add PDF Index/Outline entry
         % \listofkeytheorems[onlynamed, swapnumber, title=\listtheoremname]
 
