--- a/thesis.tex
+++ b/thesis.tex
@@ -1,28 +1,7 @@
-\newcommand*{\TeXturedVERSION}{1.3.0} %% TeXtured 2025-05-25
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% NOTE: If you find any issues or have any suggestions, please open %%
-%%       an Issue on GitHub: https://github.com/jdujava/TeXtured     %%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%&prec
+%! TEX root = thesis.tex
 
-%% Enable built-in LaTeX support for PDF/A compliance (must be before `\documentclass`)
-\DocumentMetadata{lang=en, pdfversion=1.7, pdfstandard=A-2u}
-\input{preamble/pdfA-compliance/glyphtounicode}
-
-%% NOTE: Choose the desirable page layout version (electronic vs print)
-\documentclass[12pt,a4paper]{report}                      % single-side (electronic)
-% \documentclass[12pt,a4paper,openright,twoside]{report}  % two-sided (for printing)
-
-%% Set some toggle flags to control some of the document properties
-\input{preamble/toggles}
-% \FANCYfalse % disable some of the more fancy stylistic choices
-%% NOTE: Comment out the following lines for the final version
-\WIPtrue            % THIS IS A WORK-IN-PROGRESS VERSION
-% \EXTRAMARGINtrue  % add extra right margin in WIP version (for notes/corrections)
-% \LINKBOXESfalse   % disable reference/link boxes for faster compilations
-\CENSORtrue         % THIS IS A CENSORED VERSION
-
-%% Preamble - data, packages, macros, and more
-\input{preamble/main}
+\usetikzlibrary{fadings}
 
 %% Only uncommented files are included (faster compilation)
 %% NOTE: If no files are uncommented, all files are included
