conditionally load the preamble instead of precompiled format file
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/prec.tex
+++ b/prec.tex
@@ -1,3 +1,5 @@
+\def\PreambleLoaded{} % for \ifdefined\PreambleLoaded conditional
+
 \newcommand*{\TeXturedVERSION}{1.3.0} %% TeXtured 2025-05-25
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% NOTE: If you find any issues or have any suggestions, please open %%
