chore(hyperref): anchor bug was fixed in the latest version
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/hacks/fix-hyperref.tex
+++ b/preamble/hacks/fix-hyperref.tex
@@ -1,11 +1,12 @@
-%% HACK: fix https://github.com/T-F-S/tcolorbox/issues/297
+%% HACK: fix https://github.com/T-F-S/tcolorbox/issues/297 (for hyperref before 2025/05/20)
 %% see https://github.com/latex3/hyperref/commit/6f0378f4339538d397874873d338c85c8b03c6bb#diff-78b0d75637be67a5e057881594b09f87fa61562fb56bde1e1298c81c30fa45e8R431
 %% modifies /usr/share/texmf-dist/tex/latex/hyperref/hyperref.sty
 \ExplSyntaxOn
 \makeatletter
-\cs_undefine:N \__hyp_target_raise:n
-\cs_new_protected:Npn \__hyp_target_raise:n #1
- {
+\IfPackageAtLeastTF{hyperref}{2025-05-20}{}{
+ \cs_undefine:N \__hyp_target_raise:n
+ \cs_new_protected:Npn \__hyp_target_raise:n #1
+  {
    \mode_if_vertical:TF
     { #1 }
     {
@@ -27,6 +28,7 @@
      \kern0pt
      \Hy@RestoreSpaceFactor
     }
- }
+  }
+}
 \makeatother
 \ExplSyntaxOff
