fix(math): exchange \epsilon and \varepsilon
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/math/macros.tex
+++ b/preamble/math/macros.tex
@@ -154,7 +154,8 @@
 
 %% Exchange \epsilon and \varepsilon
 \NewCommandCopy{\oldepsilon}{\epsilon}
-\renewcommand*{\epsilon}{\varepsilon}
+\NewCommandCopy{\oldvarepsilon}{\varepsilon}
+\renewcommand*{\epsilon}{\oldvarepsilon}
 \renewcommand*{\varepsilon}{\oldepsilon}
 
 %% Math version of `\raisebox` and `\scalebox`
