better onesided/twosided option
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/textured.cls
+++ b/preamble/textured.cls
@@ -20,7 +20,8 @@
     noLINKBOXES.ifnot = LINKBOXES,
     CENSOR.if   = CENSOR,
     noCENSOR.ifnot = CENSOR,
-    twosided.code = {\PassOptionsToClass{openright,twoside}{report}},
+    twosided.if    = @textured@twosided,
+    onesided.ifnot = @textured@twosided,
 }
 
 \DeclareUnknownKeyHandler{%
@@ -33,6 +34,9 @@
 }
 \ProcessKeyOptions
 
+\if@textured@twosided
+    \PassOptionsToClass{openright,twoside}{report}
+\fi
 \LoadClass{report}
 
 % \RequirePackage[...]{package-name}[<release-info>]
