--- a/thesis.tex
+++ b/thesis.tex
@@ -15,13 +15,9 @@
     % noLINKBOXES, % disable link/reference boxes for faster compilations
     CENSOR,      % THIS IS A CENSORED VERSION
     % noFANCY,   % disable some of the more fancy stylistic choices
-    % twosided,  % enable two-sided layout (for printing)
+    % twosided,  % choose the two-sided layout (for printing)
 }{textured}
-
-%% NOTE: Choose the desirable page layout version (electronic vs print)
-\documentclass[12pt,a4paper]{preamble/textured}                      % single-side (electronic)
-% \documentclass[12pt,a4paper]{report}                      % single-side (electronic)
-% \documentclass[12pt,a4paper,openright,twoside]{report}  % two-sided (for printing)
+\documentclass[12pt,a4paper]{preamble/textured}
 
 %% Preamble - data, packages, macros, and more
 \input{preamble/main}
