--- a/preamble/toggles.tex
+++ b/preamble/toggles.tex
@@ -3,6 +3,8 @@
 \newif\ifFANCY       %% whether to enable some more fancy stylistic choices
 \newif\ifWIP         %% whether to enable debug commands, todos, etc.
 \newif\ifEXTRAMARGIN %% whether WIP mode has extra right margin
+\newif\ifLINKBOXES   %% whether to enable reference/citation/link boxes
 \newif\ifCENSOR      %% whether to censor denoted passages
 
 \FANCYtrue        %% by default, enable fancy features
+\LINKBOXEStrue    %% by default, enable boxes for references/citations/links
