--- a/thesis.tex
+++ b/thesis.tex
@@ -18,6 +18,7 @@
 %% NOTE: Comment out the following lines for the final version
 \WIPtrue            % THIS IS A WORK-IN-PROGRESS VERSION
 % \EXTRAMARGINtrue  % add extra right margin in WIP version (for notes/corrections)
+% \LINKBOXESfalse   % disable reference/link boxes for faster compilations
 \CENSORtrue         % THIS IS A CENSORED VERSION
 
 %% Preamble - data, packages, macros, and more
